cmake_minimum_required(VERSION 2.8)

PROJECT(xtee)

SET(CMAKE_BUILD_TYPE "Debug") 

SET(CMAKE_SOURCE_DIR .)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

ADD_EXECUTABLE(xtee
    xtee.cc main.cc
)

# ADD_SUBDIRECTORY(src)
# AUX_SOURCE_DIRECTORY(.)
# ADD_EXECUTABLE(${DIR_SRCS})
# set(SOURCE xtee.cc)